<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.frdiniz.calculator.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/displayCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="3">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:padding="16dp"
            android:textAlignment="viewEnd"
            android:textSize="72sp" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/displayCardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/negate"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickClear"/>

    <Button
        android:id="@+id/negate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/negate"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/clear"
        app:layout_constraintRight_toLeftOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/displayCardView"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        tools:text="+/-"
        android:onClick="onClickNegate"/>

    <Button
        android:id="@+id/percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percent"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/negate"
        app:layout_constraintRight_toLeftOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/displayCardView"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickOperator"/>

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/divide"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/percent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayCardView"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickOperator"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/seven"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/eight"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/seven"
        app:layout_constraintRight_toLeftOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/negate"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/nine"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/eight"
        app:layout_constraintRight_toLeftOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/multiply"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/nine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickOperator"/>

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/four"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/five"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/four"
        app:layout_constraintRight_toLeftOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/six"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/five"
        app:layout_constraintRight_toLeftOf="@+id/subtract"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/subtract"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/six"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickOperator"/>

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/four"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/one"
        app:layout_constraintRight_toLeftOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/five"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/three"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/two"
        app:layout_constraintRight_toLeftOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/six"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtract"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickOperator"/>


    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent2"
        android:text="@string/dot"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/zero"
        app:layout_constraintRight_toLeftOf="@+id/equal"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/equal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/dot"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        android:onClick="onClickResult"/>

</android.support.constraint.ConstraintLayout>
